set up OAuth through GitHub and a static client app w/ CSRF

--- a/pom.xml
+++ b/pom.xml
@@ -59,10 +59,6 @@
 <!--        </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 		<dependency>
@@ -76,6 +72,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-messaging</artifactId>
+            <version>5.2.2.RELEASE</version> <!-- this should stay in sync w/ what `spring-boot-starter-security` depends on -->
 		</dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
